add simulation note

--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
                     style="margin-top: 15px; font-size: 0.8rem; border: 1px solid #fbbf24; background: #fffbeb; padding: 10px; border-radius: 4px;">
                     <strong>Simulation Note:</strong> The "Sticky End" shown in yellow is the active part of the input
                     molecule waiting to be bound by a transition molecule.
+                    Bases marked in red mark the ends of the Fok1 cleavage site.
                 </div>
             </div>
         </div>
